# mini2

./: .gitignore  CMakeLists.txt  Readme.md
config/: overlay_config.json
proto/: data.grpc.pb.cc  data.grpc.pb.h  data.pb.cc  data.pb.h  data.proto
python/: client.py  data_pb2.py  data_pb2_grpc.py
src/: read_config.cpp  read_config.h
src/nodeA/: CMakeLists.txt  serverA.cpp
src/nodeB/: CMakeLists.txt  serverB.cpp
src/nodeC/: CMakeLists.txt  serverC.cpp
src/nodeD/: CMakeLists.txt  serverD.cpp
src/nodeE/: CMakeLists.txt  serverE.cpp
